--- a/Css/ebook.css
+++ b/Css/ebook.css
@@ -129,6 +129,8 @@ nav ul a.buy-now{
 .contact form .form-control:focus,
 .contact form .form-select:focus{
   box-shadow: 0 0 0 0.25rem rgba(194, 153, 56,0.25);
+  border: none;
+  border: 1px solid #dee2e6;
 }
 .contact .resizeplaceholder:focus::placeholder{
   font-size: 12px;
